# knowledge_extraction_agent

./: pyproject.toml
src/agent_tutorial/: __init__.py  oak_agent.py
src/general_ontology_agent/: hello_world.py  oak_agent_GENERAL.py  ols_lookup_agent.py  template_grounding_agent.py
src/general_ontology_agent/Example-outputs/: CR.yaml
src/general_ontology_agent/input_text_examples/: CR.txt  Salivary_gland_acinar.txt
src/general_ontology_agent/linkml_templates/: cl_kg.yaml
