[project]
name = "agent-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Justin Reese", email = "justaddcoffee@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "oaklib>=0.6.22",
    "pydantic-ai>=0.2.12",
]

[project.scripts]
agent-tutorial = "agent_tutorial:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
